@@ -1,4 +1,15 @@
 2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+	* src/BaseThought.py
+	* src/MMapArea.py
+	* src/ImageThought.py
+	* src/TextThought.py:
+	Fix performance regression
+
+2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+	* src/MMapArea.py:
+	Fix double-clicking on thought
+
+2011-04-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 	* src/Links.py
 	* src/MMapArea.py:
 	Fix issue 124 and fix regression that links could not be deleted
